--- a/src/MerchantFrontend/package.json
+++ b/src/MerchantFrontend/package.json
@@ -20,13 +20,15 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@clr/angular": "^3.0.1",
+    "@clr/core": "3.0.1",
+    "@clr/icons": "3.0.1",
+    "@clr/ui": "3.0.1",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@clr/ui": "3.0.1",
-    "@clr/icons": "3.0.1",
-    "@clr/core": "3.0.1",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
